--- a/src/index.css
+++ b/src/index.css
@@ -76,8 +76,17 @@ button:focus-visible {
 }
 .filter-section {
   padding-bottom: 10px;
-
 }
+/* .wishlist-img {
+  width: 100%;
+  height: 150px;
+  object-fit: contain; 
+} */
+/* 
+.image-wrapper {
+  height: 220px;
+  overflow: hidden;
+} */
 
 /* Apply only on md and up */
 @media (min-width: 768px) {
@@ -88,9 +97,13 @@ button:focus-visible {
   .filter-section {
     min-height: 100vh;
       /* margin-bottom: 2px; */
-
-  }
+}
 .books {
     flex-grow: 1;
   }
+  /* .wishlist-img {
+  width: 370px;
+  height: 200px;
+  object-fit: contain; 
+} */
 }
